# Nextext

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.backend.cpu  Dockerfile.backend.cuda  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.frontend  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.react  compose.override.yaml  compose.yaml
docs/superpowers/plans/: 2026-06-13-standalone-ner.md  2026-06-16-audio-transcode-normalization.md  2026-07-01-delete-clear-jobs.md  2026-07-09-transcript-txt-export.md  2026-07-10-diarization-always-on-wordlevel.md  2026-07-12-sentence-restoration-low-punctuation.md
docs/superpowers/specs/: 2026-06-13-standalone-ner-design.md  2026-06-14-external-vad-design.md  2026-06-16-audio-transcode-normalization-design.md  2026-07-01-delete-jobs-clear-list-design.md  2026-07-08-multiplexed-job-sse-design.md  2026-07-09-transcript-txt-export-design.md  2026-07-10-batch-summaries-combined-txt-design.md  2026-07-10-diarization-always-on-wordlevel-design.md  2026-07-11-diarization-vad-gating-design.md  2026-07-12-sentence-restoration-low-punctuation-design.md
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/nginx/: default.conf  security-headers.conf
frontend/src/api/: client.test.ts  client.ts  jobs.test.ts  jobs.ts  meta.test.ts  meta.ts  sse.test.ts  sse.ts  types.ts
frontend/src/components/: VersionBadge.test.tsx  VersionBadge.tsx
frontend/src/components/common/: ErrorBanner.tsx  Spinner.tsx
frontend/src/components/jobs/: BatchDownloadMenu.test.tsx  BatchDownloadMenu.tsx  BatchProgress.test.tsx  BatchProgress.tsx  ClearJobsMenu.test.tsx  ClearJobsMenu.tsx  JobCard.test.tsx  JobCard.tsx
frontend/src/components/layout/: Shell.test.tsx  Shell.tsx  StatusBar.integration.test.tsx  StatusBar.test.tsx  StatusBar.tsx
frontend/src/components/results/: DownloadButtons.tsx  EntitiesTab.tsx  HateSpeechTab.tsx  ResultPanel.test.tsx  ResultPanel.tsx  SummaryTab.tsx  TranscriptTab.test.tsx  TranscriptTab.tsx  WordCloudTab.tsx  WordCountsTab.tsx
frontend/src/components/upload/: Dropzone.tsx  UploadForm.test.tsx  UploadForm.tsx
frontend/src/hooks/: useArtifactImage.ts  useHealth.ts  useJobResult.ts  useJobStream.test.tsx  useJobStream.ts  useJobs.test.tsx  useJobs.ts  useLanguages.ts  useOwnerJobStream.test.tsx  useOwnerJobStream.ts
frontend/src/identity/: owner.test.ts  owner.ts
frontend/src/lib/: download.test.ts  download.ts  jobEvents.test.ts  jobEvents.ts  jobProgress.test.ts  jobProgress.ts  jobProgressStore.test.ts  jobProgressStore.ts  jobStatusSummary.test.ts  jobStatusSummary.ts  targetLang.ts  transcriptTable.test.ts  transcriptTable.ts  uploadGuard.test.ts  uploadGuard.ts
frontend/src/routes/: Home.test.tsx  Home.tsx  Router.tsx
frontend/src/styles/: globals.css
nextext/: __init__.py  app.py  cli.py  pipeline.py
nextext/api/: __init__.py  artifacts.py  identity.py  jobs.py  main.py  persistence.py  schemas.py
nextext/api/routes/: __init__.py  health.py  jobs.py
nextext/core/: __init__.py  audio.py  diarization.py  docint_transcript.py  hate_speech.py  keyframes.py  ner.py  ner_client.py  openai_cfg.py  processing.py  sentence_segmentation.py  transcription.py  translation.py  vad.py  words.py
nextext/frontend/: __init__.py  app.py  client.py  state.py
nextext/modules/: __init__.py  hatespeech.py  inference_prov_cfg.py  ollama_cfg.py  openai_cfg.py  processing.py  topics.py  toxicity.py  transcription.py  translation.py  words.py
nextext/utils/: __init__.py  __main__.py  env_cfg.py  font_loader.py  lang_maps_loader.py  lang_utils.py  log_cfg.py  logging_cfg.py  logging_cfg_loader.py  mappings_loader.py  model_loader.py  model_registry.py  spacy_model_loader.py  tokenizer_loader.py
nextext/utils/logging/: logging.yaml
nextext/utils/mappings/: madlad_models.json  ollama_models.json  spacy_entities.json  spacy_models.json  translation_languages.json  translation_models.json  whisper_languages.json  whisper_models.json
nextext/utils/prompts/: hate_speech.txt  topic_summary.txt  topic_title.txt
nextext/utils/prompts/de/: summary.txt
nextext/utils/prompts/en/: sentence_segment.txt  summary.txt  translation.txt
scripts/: bundle_images.sh  bundle_web_image.sh  create_docker_volumes.sh
src/nextext/: cli.py  pipeline.py
src/nextext/modules/: __init__.py  ollama_cfg.py  words.py
src/nextext/utils/: __init__.py  spacy_model_loader.py  spacy_models.json  whisper_languages.json
tests/: test_app.py  test_archive_cache.py  test_audio.py  test_cli.py  test_cli_docint.py  test_diarization.py  test_docint_transcript.py  test_env_cfg.py  test_hate_speech.py  test_keyframes.py  test_model_loader.py  test_model_registry.py  test_ner.py  test_ner_client.py  test_nginx_config.py  test_nnpack_disabled.py  test_no_torch.py  test_openai_cfg.py  test_pipeline.py  test_processing.py  test_sentence_segmentation.py  test_spacy_model_loader.py  test_transcription.py  test_translation.py  test_vad.py  test_words.py
tests/test_api/: __init__.py  conftest.py  test_artifacts.py  test_batch_artifacts.py  test_delete_active_jobs.py  test_health.py  test_identity.py  test_job_options_keyframes.py  test_jobs.py  test_keyframes_artifact.py  test_languages.py  test_metrics.py  test_owner_stream.py  test_ownership.py  test_persistence.py  test_pipeline_keyframes.py  test_sse.py  test_version.py
tests/test_frontend/: __init__.py  test_client.py  test_submit_files.py  test_upload_guard.py
