[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextext"
version = "0.8.0"
description = "Audio transcription and analysis."
authors = [
    { name = "nos-tromo" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.1.1",
    "arabic-reshaper>=3.0.0",
    "camel-tools>=1.5.2",
    "gliner>=0.2.0",
    "huggingface-hub>=0.26.2",
    "langdetect>=1.0.9",
    "llvmlite>=0.41.0",
    "loguru>=0.7.3",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "openai>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pip>=25.0.1",
    "pyannote-audio>=3.3.2,<4",
    "pyarabic>=0.6.15",
    "pycountry>=24.6.1",
    "python-bidi>=0.6.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pyvis>=0.3.2",
    "scikit-learn>=1.5.2",
    "spacy>=3.8.4",
    "streamlit>=1.44.1",
    "textual>=4.0.0",
    "typer>=0.12,<1",
    "torch>=2.5.1,<2.9",
    "torchaudio>=2.5.1,<2.9",
    "torchvision>=0.20.1,<0.24",
    "watchdog>=6.0.0",
    "whisperx>=3.3.4",
    "wordcloud>=1.9.4",
]

[project.urls]
Repository = "https://github.com/nos-tromo/Nextext.git"

[project.scripts]
load-models = "nextext.utils.model_loader:main"
load-spacy-models = "nextext.utils.model_loader:main"
nextext = "nextext.app:cli"
nextext-cli = "nextext.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.15.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
nextext = [
    "utils/fonts/*.ttf",
    "utils/mappings/*.json",
    "utils/prompts/*.txt",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[tool.uv.sources]
nextext = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
