[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextext"
version = "0.8.0"
description = "Audio transcription and analysis."
authors = [
    { name = "nos-tromo" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.1.1",
    "anyio>=4.4",
    "arabic-reshaper>=3.0.0",
    "camel-tools>=1.5.2",
    "fastapi>=0.115",
    "gliner>=0.2.0",
    "httpx>=0.27",
    "huggingface-hub>=0.26.2",
    "langdetect>=1.0.9",
    "llvmlite>=0.41.0",
    "loguru>=0.7.3",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "openai>=2.2.0",
    "openai-whisper>=20240930",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pip>=25.0.1",
    "pyannote-audio>=3.3.2,<5",
    "pyarabic>=0.6.15",
    "pycountry>=24.6.1",
    "python-bidi>=0.6.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.5.2",
    "spacy>=3.8.4",
    "sse-starlette>=2.1",
    "streamlit>=1.44.1",
    "typer>=0.12,<1",
    "uvicorn[standard]>=0.30",
    "watchdog>=6.0.0",
    "wordcloud>=1.9.4",
]

[project.urls]
Repository = "https://github.com/nos-tromo/Nextext.git"

[project.scripts]
load-models = "nextext.utils.model_loader:main"
load-spacy-models = "nextext.utils.model_loader:main"
nextext = "nextext.app:cli"
nextext-api = "nextext.api.main:run"
nextext-cli = "nextext.cli:main"

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff==0.15.14",
]
frontend = [
    "altair>=5.4",
    "httpx>=0.27",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.44.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
nextext = [
    "utils/fonts/*.ttf",
    "utils/mappings/*.json",
    "utils/prompts/*.txt",
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1,<2.13",
  "torchaudio>=2.5.1,<2.12",
  "torchvision>=0.20.1,<0.28",
]
cuda = [
  "torch>=2.5.1,<2.13",
  "torchaudio>=2.5.1,<2.12",
  "torchvision>=0.20.1,<0.28",
]

[tool.ruff]
# Mirrors nos-tromo/.github/configs/python-strict/ruff.toml. target-version
# is the only key that may differ (Nextext floors at py312). Drift fails CI.
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "D",
    "ANN",
    "UP",
    "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# Mirrors nos-tromo/.github/configs/python-strict/mypy.ini. Drift fails CI.
strict = true
ignore_missing_imports = true
no_incremental = true

[tool.uv]
package = true
conflicts = [
  [{ extra = "cpu" }, { extra = "cuda" }],
]

[tool.uv.sources]
nextext = { workspace = true }
torch = [
  { index = "pytorch-cu128", extra = "cuda" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchaudio = [
  { index = "pytorch-cu128", extra = "cuda" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cuda" },
  { index = "pytorch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
