[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextext"
version = "1.0.0"
description = "Audio transcription and analysis."
authors = [
    { name = "nos-tromo" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyio>=4.14.1",
    "arabic-reshaper>=3.0.0",
    "av>=12",
    "camel-tools>=1.5.2",
    "fastapi>=0.138.2",
    "httpx>=0.27",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pip>=25.0.1",
    "pyarabic>=0.6.15",
    "pycountry>=24.6.1",
    "python-bidi>=0.6.11",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32",
    "spacy>=3.8.4",
    "sse-starlette>=3.4.5",
    "typer>=0.26.8,<1",
    "uvicorn[standard]>=0.49.0",
    "watchdog>=6.0.0",
    "wordcloud>=1.9.4",
]

[project.urls]
Repository = "https://github.com/nos-tromo/Nextext.git"

[project.scripts]
load-models = "nextext.utils.model_loader:main"
load-spacy-models = "nextext.utils.model_loader:main"
nextext-api = "nextext.api.main:run"
nextext-cli = "nextext.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyrefly==1.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff==0.15.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
nextext = [
    "utils/fonts/*.ttf",
    "utils/mappings/*.json",
    "utils/prompts/en/*.txt",
    "utils/prompts/de/*.txt",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Mirrors nos-tromo/.github/configs/python-strict/ruff.toml. target-version
# is the only key that may differ (Nextext floors at py312). Drift fails CI.
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "D",
    "ANN",
    "UP",
    "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyrefly]
# Mirrors nos-tromo/.github/configs/python-strict/pyrefly.toml. Drift fails CI.
preset = "strict"
ignore-missing-imports = ["*"]

[tool.uv]
package = true
# camel-tools is used only for the pure-Python simple_word_tokenize (Arabic
# tokenization); its torch / transformers requirements back morphology and
# NER models Nextext never imports. Override them away so the image stays
# torch-free — tests/test_no_torch.py pins this invariant.
override-dependencies = [
  "torch; sys_platform == 'never'",
  "transformers; sys_platform == 'never'",
]

[tool.uv.sources]
nextext = { workspace = true }
